tests/baselines/reference/parserGreaterThanTokenAmbiguity13.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity13.ts (1 errors) ====
    1 >>/**/= 2;
            ~
!!! parserGreaterThanTokenAmbiguity13.ts(1,9): error TS1005: 'expression' expected.